# shorter-macro

./: Cargo.toml
src/: lib.rs
