[package]
name = "shorter-macro"
version = "1.0.0"
edition = "2021"
description = "Shorter std macro names."
repository = "https://github.com/wusyong/shorter-macro"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
